--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hakan_etno_markt",
-  "homepage": "https://hakansaglam29.github.io/online-supermarkt",
+  "homepage": "https://hakansaglam29.github.io/online-supermarkt/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
